--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.profiles.active=test
-
-spring.datasource.url=jdbc:mysql://localhost/order-backend
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.profiles.active=dev
