Implementando SmtpEmailService com servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default-sender=moslite@hotmail.com
-default-recipient=moslite@hotmail.com
+default-sender=
+default-recipient=
