--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default-sender=
 default-recipient=
+
+jwt.secret=SequenciaDeCaracteresParaAssinaturaDoToken
+jwt.expiration=60000
