--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Sensitive Data ###
+src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-test.properties
+
 ### STS ###
 .apt_generated
 .classpath
